--- a/main.tex
+++ b/main.tex
@@ -73,7 +73,7 @@
 
 \begin{document}
 
-\newcommand{\code}[1]{\colorbox{black!10!white}{\texttt{#1}}}
+\newcommand{\code}[1]{\texttt{#1}}
 
 \tcbset {
   base/.style={
